Attempting to fix styling issues on mobile.

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -112,3 +112,8 @@ section.quote h2 {
     color: white;
     font-size: 24px;
 }
+
+.team-member-wrapper {
+    margin-left: 15px;
+    margin-right: 15px;
+}
